########## version 0.99.23:

- Add .fastq and fasta files for pre-processing

########## version 0.99.22:

Corrected bug in object constructor in case only one input DNA experiment is 
given.

########## version 0.99.21:

Add error messages in the input subtraction function. If the binning is,
different between the input dna and experiment bigwigs, an error message 
is shown.

########## version 0.99.17:

For Windows, change warning/return messages to stop messages

########## version 0.99.9:

Add return() instructions if the used operating system is Windows.

########## version 0.99.7:

Add warning for Windows user regarding possible problems reading BigWig files 
because of rtracklayer (>= 1.37.6) that does not support this format on 
Windows.

########## version 0.99.5:

1) Provide a more exhaustive description of the package in the DESCRIPTION 
file.
2) Use seq_len instead of 1:length, 1:nrow() or 1:ncol()
3) use stop instead of warning + return
4) modify .retrieveAverageValuesList and .retrieveMatBindingList to avoid 
declaring an empty list.
5) Remove <<- in different functions
6) remove stop(paste0 form
7) Replace sapply by vapply
8) use accessors instead of @
9) remove semi-colons from code
10) add signature = "theObject" to generics
11) In plotHeatmaps, put default value of raster_value to FALSE